# fund-coding-assignment

./: .gitignore  README.md  insights.py  pyproject.toml  requirements.txt  run_etl.py
external_funds_transformed/: Applebead.28-02-2023 breakdown.csv  Applebead.30-04-2023 breakdown.csv  Applebead.30-06-2023 breakdown.csv  Applebead.30-09-2022 breakdown.csv  Applebead.30-11-2022 breakdown.csv  Applebead.31-01-2023 breakdown.csv  Applebead.31-03-2023 breakdown.csv  Applebead.31-05-2023 breakdown.csv  Applebead.31-07-2023 breakdown.csv  Applebead.31-08-2022 breakdown.csv  Applebead.31-08-2023 breakdown.csv  Applebead.31-10-2022 breakdown.csv  Applebead.31-12-2022 breakdown.csv  Belaware.28_02_2023.csv  Belaware.30_04_2023.csv  Belaware.30_06_2023.csv  Belaware.30_09_2022.csv  Belaware.30_11_2022.csv  Belaware.31_01_2023.csv  Belaware.31_03_2023.csv  Belaware.31_05_2023.csv  Belaware.31_07_2023.csv  Belaware.31_08_2022.csv  Belaware.31_08_2023.csv  Belaware.31_10_2022.csv  Belaware.31_12_2022.csv  Fund Whitestone.28-02-2023 - details.csv  Fund Whitestone.30-04-2023 - details.csv  Fund Whitestone.30-06-2023 - details.csv  Fund Whitestone.30-09-2022 - details.csv  Fund Whitestone.30-11-2022 - details.csv  Fund Whitestone.31-01-2023 - details.csv  Fund Whitestone.31-03-2023 - details.csv  Fund Whitestone.31-05-2023 - details.csv  Fund Whitestone.31-07-2023 - details.csv  Fund Whitestone.31-08-2022 - details.csv  Fund Whitestone.31-08-2023 - details.csv  Fund Whitestone.31-10-2022 - details.csv  Fund Whitestone.31-12-2022 - details.csv  Leeder.01_31_2023.csv  (+90 more)
queries/: fund_performance_query.sql  recon_query.sql
query_output/: fund_performance_query_result.csv  recon_query_result.csv
src/: load.py  setup.py  transform.py
src/config/: constants.py
src/models/: models.py
src/utils/: utils.py
tests/: test_insights.py  test_load.py  test_models.py  test_run_etl.py  test_setup.py  test_transform.py  test_utils.py
